Fix issues reported by Intellij, add Quartz, rework adding Documents